kubernetes/traefik/dashboard/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external # whatever you named ingressClass while deploying Traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.k3s.datallboy.lan.techhaven.io`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
# tls:
#  secretName: k3s.datallboy.lan.techhaven.io
